src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIVIDE
    NOT
    OR

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> external_declaration
Rule 2     translation_unit -> translation_unit external_declaration
Rule 3     external_declaration -> include_header
Rule 4     empty -> <empty>
Rule 5     include_header -> INCLUDE HEADER
Rule 6     external_declaration -> function_definition
Rule 7     function_definition -> id_declaration arguments compound_statement
Rule 8     arguments -> LPAREN args RPAREN
Rule 9     args -> empty
Rule 10    args -> VOID
Rule 11    args -> INT ID
Rule 12    args -> INT ID COMMA INT ID
Rule 13    external_declaration -> declaration
Rule 14    declaration -> init_declaration SEMI
Rule 15    init_declaration -> id_declaration
Rule 16    init_declaration -> id_declaration LBRACKET NUMBER RBRACKET
Rule 17    init_declaration -> id_declaration EQUALS expression
Rule 18    id_declaration -> VOID ID
Rule 19    id_declaration -> INT ID
Rule 20    external_declaration -> SEMI
Rule 21    statement -> compound_statement
Rule 22    statement -> expression_statement
Rule 23    statement -> jump_statement
Rule 24    statement -> loop_statement
Rule 25    statement -> condition_statement
Rule 26    jump_statement -> BREAK SEMI
Rule 27    jump_statement -> RETURN SEMI
Rule 28    jump_statement -> RETURN expression SEMI
Rule 29    loop_statement -> FOR LPAREN expression_statement expression_statement expression_statement RPAREN statement
Rule 30    loop_statement -> FOR LPAREN expression_statement expression_statement expression RPAREN statement
Rule 31    loop_statement -> WHILE LPAREN expression RPAREN statement
Rule 32    condition_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 33    condition_statement -> IF LPAREN expression RPAREN statement
Rule 34    condition_statement -> IF LPAREN ID MOD ID EQ NUMBER RPAREN statement
Rule 35    condition_statement -> IF LPAREN expression LOR expression RPAREN statement ELSE statement
Rule 36    compound_statement -> LBRACE declaration_list RBRACE
Rule 37    compound_statement -> LBRACE declaration_list statement_list RBRACE
Rule 38    compound_statement -> LBRACE statement_list RBRACE
Rule 39    compound_statement -> LBRACE RBRACE
Rule 40    declaration_list -> declaration
Rule 41    declaration_list -> declaration_list declaration
Rule 42    expression_statement -> SEMI
Rule 43    expression_statement -> expression SEMI
Rule 44    statement_list -> statement
Rule 45    statement_list -> statement_list statement
Rule 46    expression -> conditional_expression
Rule 47    expression -> unary_expression EQUALS expression
Rule 48    expression -> STRING
Rule 49    temp -> LNOT unary_expression
Rule 50    term -> temp
Rule 51    function_call -> ID LPAREN expression_list RPAREN
Rule 52    function_call -> ID LPAREN RPAREN
Rule 53    expression_list -> expression
Rule 54    expression_list -> expression_list COMMA expression
Rule 55    unary_expression -> function_call
Rule 56    expression -> PP unary_expression
Rule 57    expression -> MM unary_expression
Rule 58    expression -> unary_expression PP
Rule 59    expression -> unary_expression MM
Rule 60    unary_expression -> AND term
Rule 61    term -> ID
Rule 62    term -> ID LBRACKET NUMBER RBRACKET
Rule 63    term -> ID LBRACKET ID RBRACKET
Rule 64    unary_expression -> term
Rule 65    term -> factor
Rule 66    factor -> NUMBER
Rule 67    factor -> LPAREN expression RPAREN
Rule 68    conditional_expression -> cast_expression
Rule 69    conditional_expression -> unary_expression LT term
Rule 70    conditional_expression -> unary_expression LE term
Rule 71    conditional_expression -> unary_expression GE term
Rule 72    conditional_expression -> unary_expression GT term
Rule 73    conditional_expression -> unary_expression EQ term
Rule 74    conditional_expression -> unary_expression NE term
Rule 75    conditional_expression -> unary_expression AND term
Rule 76    conditional_expression -> unary_expression LAND term
Rule 77    conditional_expression -> unary_expression PLUS term
Rule 78    conditional_expression -> unary_expression TIMES term
Rule 79    conditional_expression -> unary_expression MOD term
Rule 80    conditional_expression -> unary_expression MINUS term
Rule 81    cast_expression -> unary_expression

Terminals, with rules where they appear

AND                  : 60 75
BREAK                : 26
COMMA                : 12 54
DIVIDE               : 
ELSE                 : 32 35
EQ                   : 34 73
EQUALS               : 17 47
FOR                  : 29 30
GE                   : 71
GT                   : 72
HEADER               : 5
ID                   : 11 12 12 18 19 34 34 51 52 61 62 63 63
IF                   : 32 33 34 35
INCLUDE              : 5
INT                  : 11 12 12 19
LAND                 : 76
LBRACE               : 36 37 38 39
LBRACKET             : 16 62 63
LE                   : 70
LNOT                 : 49
LOR                  : 35
LPAREN               : 8 29 30 31 32 33 34 35 51 52 67
LT                   : 69
MINUS                : 80
MM                   : 57 59
MOD                  : 34 79
NE                   : 74
NOT                  : 
NUMBER               : 16 34 62 66
OR                   : 
PLUS                 : 77
PP                   : 56 58
RBRACE               : 36 37 38 39
RBRACKET             : 16 62 63
RETURN               : 27 28
RPAREN               : 8 29 30 31 32 33 34 35 51 52 67
SEMI                 : 14 20 26 27 28 42 43
STRING               : 48
TIMES                : 78
VOID                 : 10 18
WHILE                : 31
error                : 

Nonterminals, with rules where they appear

args                 : 8
arguments            : 7
cast_expression      : 68
compound_statement   : 7 21
condition_statement  : 25
conditional_expression : 46
declaration          : 13 40 41
declaration_list     : 36 37 41
empty                : 9
expression           : 17 28 30 31 32 33 35 35 43 47 53 54 67
expression_list      : 51 54
expression_statement : 22 29 29 29 30 30
external_declaration : 1 2
factor               : 65
function_call        : 55
function_definition  : 6
id_declaration       : 7 15 16 17
include_header       : 3
init_declaration     : 14
jump_statement       : 23
loop_statement       : 24
statement            : 29 30 31 32 32 33 34 35 35 44 45
statement_list       : 37 38 45
temp                 : 50
term                 : 60 64 69 70 71 72 73 74 75 76 77 78 79 80
translation_unit     : 2 0
unary_expression     : 47 49 56 57 58 59 69 70 71 72 73 74 75 76 77 78 79 80 81

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . external_declaration
    (2) translation_unit -> . translation_unit external_declaration
    (3) external_declaration -> . include_header
    (6) external_declaration -> . function_definition
    (13) external_declaration -> . declaration
    (20) external_declaration -> . SEMI
    (5) include_header -> . INCLUDE HEADER
    (7) function_definition -> . id_declaration arguments compound_statement
    (14) declaration -> . init_declaration SEMI
    (18) id_declaration -> . VOID ID
    (19) id_declaration -> . INT ID
    (15) init_declaration -> . id_declaration
    (16) init_declaration -> . id_declaration LBRACKET NUMBER RBRACKET
    (17) init_declaration -> . id_declaration EQUALS expression

    SEMI            shift and go to state 6
    INCLUDE         shift and go to state 7
    VOID            shift and go to state 10
    INT             shift and go to state 11

    translation_unit               shift and go to state 1
    external_declaration           shift and go to state 2
    include_header                 shift and go to state 3
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    id_declaration                 shift and go to state 8
    init_declaration               shift and go to state 9

state 1

    (0) S' -> translation_unit .
    (2) translation_unit -> translation_unit . external_declaration
    (3) external_declaration -> . include_header
    (6) external_declaration -> . function_definition
    (13) external_declaration -> . declaration
    (20) external_declaration -> . SEMI
    (5) include_header -> . INCLUDE HEADER
    (7) function_definition -> . id_declaration arguments compound_statement
    (14) declaration -> . init_declaration SEMI
    (18) id_declaration -> . VOID ID
    (19) id_declaration -> . INT ID
    (15) init_declaration -> . id_declaration
    (16) init_declaration -> . id_declaration LBRACKET NUMBER RBRACKET
    (17) init_declaration -> . id_declaration EQUALS expression

    SEMI            shift and go to state 6
    INCLUDE         shift and go to state 7
    VOID            shift and go to state 10
    INT             shift and go to state 11

    external_declaration           shift and go to state 12
    include_header                 shift and go to state 3
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    id_declaration                 shift and go to state 8
    init_declaration               shift and go to state 9

state 2

    (1) translation_unit -> external_declaration .

    SEMI            reduce using rule 1 (translation_unit -> external_declaration .)
    INCLUDE         reduce using rule 1 (translation_unit -> external_declaration .)
    VOID            reduce using rule 1 (translation_unit -> external_declaration .)
    INT             reduce using rule 1 (translation_unit -> external_declaration .)
    $end            reduce using rule 1 (translation_unit -> external_declaration .)


state 3

    (3) external_declaration -> include_header .

    SEMI            reduce using rule 3 (external_declaration -> include_header .)
    INCLUDE         reduce using rule 3 (external_declaration -> include_header .)
    VOID            reduce using rule 3 (external_declaration -> include_header .)
    INT             reduce using rule 3 (external_declaration -> include_header .)
    $end            reduce using rule 3 (external_declaration -> include_header .)


state 4

    (6) external_declaration -> function_definition .

    SEMI            reduce using rule 6 (external_declaration -> function_definition .)
    INCLUDE         reduce using rule 6 (external_declaration -> function_definition .)
    VOID            reduce using rule 6 (external_declaration -> function_definition .)
    INT             reduce using rule 6 (external_declaration -> function_definition .)
    $end            reduce using rule 6 (external_declaration -> function_definition .)


state 5

    (13) external_declaration -> declaration .

    SEMI            reduce using rule 13 (external_declaration -> declaration .)
    INCLUDE         reduce using rule 13 (external_declaration -> declaration .)
    VOID            reduce using rule 13 (external_declaration -> declaration .)
    INT             reduce using rule 13 (external_declaration -> declaration .)
    $end            reduce using rule 13 (external_declaration -> declaration .)


state 6

    (20) external_declaration -> SEMI .

    SEMI            reduce using rule 20 (external_declaration -> SEMI .)
    INCLUDE         reduce using rule 20 (external_declaration -> SEMI .)
    VOID            reduce using rule 20 (external_declaration -> SEMI .)
    INT             reduce using rule 20 (external_declaration -> SEMI .)
    $end            reduce using rule 20 (external_declaration -> SEMI .)


state 7

    (5) include_header -> INCLUDE . HEADER

    HEADER          shift and go to state 13


state 8

    (7) function_definition -> id_declaration . arguments compound_statement
    (15) init_declaration -> id_declaration .
    (16) init_declaration -> id_declaration . LBRACKET NUMBER RBRACKET
    (17) init_declaration -> id_declaration . EQUALS expression
    (8) arguments -> . LPAREN args RPAREN

    SEMI            reduce using rule 15 (init_declaration -> id_declaration .)
    LBRACKET        shift and go to state 15
    EQUALS          shift and go to state 16
    LPAREN          shift and go to state 17

    arguments                      shift and go to state 14

state 9

    (14) declaration -> init_declaration . SEMI

    SEMI            shift and go to state 18


state 10

    (18) id_declaration -> VOID . ID

    ID              shift and go to state 19


state 11

    (19) id_declaration -> INT . ID

    ID              shift and go to state 20


state 12

    (2) translation_unit -> translation_unit external_declaration .

    SEMI            reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    INCLUDE         reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    VOID            reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    INT             reduce using rule 2 (translation_unit -> translation_unit external_declaration .)
    $end            reduce using rule 2 (translation_unit -> translation_unit external_declaration .)


state 13

    (5) include_header -> INCLUDE HEADER .

    SEMI            reduce using rule 5 (include_header -> INCLUDE HEADER .)
    INCLUDE         reduce using rule 5 (include_header -> INCLUDE HEADER .)
    VOID            reduce using rule 5 (include_header -> INCLUDE HEADER .)
    INT             reduce using rule 5 (include_header -> INCLUDE HEADER .)
    $end            reduce using rule 5 (include_header -> INCLUDE HEADER .)


state 14

    (7) function_definition -> id_declaration arguments . compound_statement
    (36) compound_statement -> . LBRACE declaration_list RBRACE
    (37) compound_statement -> . LBRACE declaration_list statement_list RBRACE
    (38) compound_statement -> . LBRACE statement_list RBRACE
    (39) compound_statement -> . LBRACE RBRACE

    LBRACE          shift and go to state 22

    compound_statement             shift and go to state 21

state 15

    (16) init_declaration -> id_declaration LBRACKET . NUMBER RBRACKET

    NUMBER          shift and go to state 23


state 16

    (17) init_declaration -> id_declaration EQUALS . expression
    (46) expression -> . conditional_expression
    (47) expression -> . unary_expression EQUALS expression
    (48) expression -> . STRING
    (56) expression -> . PP unary_expression
    (57) expression -> . MM unary_expression
    (58) expression -> . unary_expression PP
    (59) expression -> . unary_expression MM
    (68) conditional_expression -> . cast_expression
    (69) conditional_expression -> . unary_expression LT term
    (70) conditional_expression -> . unary_expression LE term
    (71) conditional_expression -> . unary_expression GE term
    (72) conditional_expression -> . unary_expression GT term
    (73) conditional_expression -> . unary_expression EQ term
    (74) conditional_expression -> . unary_expression NE term
    (75) conditional_expression -> . unary_expression AND term
    (76) conditional_expression -> . unary_expression LAND term
    (77) conditional_expression -> . unary_expression PLUS term
    (78) conditional_expression -> . unary_expression TIMES term
    (79) conditional_expression -> . unary_expression MOD term
    (80) conditional_expression -> . unary_expression MINUS term
    (55) unary_expression -> . function_call
    (60) unary_expression -> . AND term
    (64) unary_expression -> . term
    (81) cast_expression -> . unary_expression
    (51) function_call -> . ID LPAREN expression_list RPAREN
    (52) function_call -> . ID LPAREN RPAREN
    (50) term -> . temp
    (61) term -> . ID
    (62) term -> . ID LBRACKET NUMBER RBRACKET
    (63) term -> . ID LBRACKET ID RBRACKET
    (65) term -> . factor
    (49) temp -> . LNOT unary_expression
    (66) factor -> . NUMBER
    (67) factor -> . LPAREN expression RPAREN

    STRING          shift and go to state 27
    PP              shift and go to state 28
    MM              shift and go to state 29
    AND             shift and go to state 32
    ID              shift and go to state 34
    LNOT            shift and go to state 39
    NUMBER          shift and go to state 37
    LPAREN          shift and go to state 35

    expression                     shift and go to state 24
    conditional_expression         shift and go to state 25
    unary_expression               shift and go to state 26
    cast_expression                shift and go to state 30
    term                           shift and go to state 31
    function_call                  shift and go to state 33
    temp                           shift and go to state 36
    factor                         shift and go to state 38

state 17

    (8) arguments -> LPAREN . args RPAREN
    (9) args -> . empty
    (10) args -> . VOID
    (11) args -> . INT ID
    (12) args -> . INT ID COMMA INT ID
    (4) empty -> .

    VOID            shift and go to state 42
    INT             shift and go to state 43
    RPAREN          reduce using rule 4 (empty -> .)

    args                           shift and go to state 40
    empty                          shift and go to state 41

state 18

    (14) declaration -> init_declaration SEMI .

    SEMI            reduce using rule 14 (declaration -> init_declaration SEMI .)
    INCLUDE         reduce using rule 14 (declaration -> init_declaration SEMI .)
    VOID            reduce using rule 14 (declaration -> init_declaration SEMI .)
    INT             reduce using rule 14 (declaration -> init_declaration SEMI .)
    $end            reduce using rule 14 (declaration -> init_declaration SEMI .)
    RBRACE          reduce using rule 14 (declaration -> init_declaration SEMI .)
    LBRACE          reduce using rule 14 (declaration -> init_declaration SEMI .)
    BREAK           reduce using rule 14 (declaration -> init_declaration SEMI .)
    RETURN          reduce using rule 14 (declaration -> init_declaration SEMI .)
    FOR             reduce using rule 14 (declaration -> init_declaration SEMI .)
    WHILE           reduce using rule 14 (declaration -> init_declaration SEMI .)
    IF              reduce using rule 14 (declaration -> init_declaration SEMI .)
    STRING          reduce using rule 14 (declaration -> init_declaration SEMI .)
    PP              reduce using rule 14 (declaration -> init_declaration SEMI .)
    MM              reduce using rule 14 (declaration -> init_declaration SEMI .)
    AND             reduce using rule 14 (declaration -> init_declaration SEMI .)
    ID              reduce using rule 14 (declaration -> init_declaration SEMI .)
    LNOT            reduce using rule 14 (declaration -> init_declaration SEMI .)
    NUMBER          reduce using rule 14 (declaration -> init_declaration SEMI .)
    LPAREN          reduce using rule 14 (declaration -> init_declaration SEMI .)


state 19

    (18) id_declaration -> VOID ID .

    LBRACKET        reduce using rule 18 (id_declaration -> VOID ID .)
    EQUALS          reduce using rule 18 (id_declaration -> VOID ID .)
    LPAREN          reduce using rule 18 (id_declaration -> VOID ID .)
    SEMI            reduce using rule 18 (id_declaration -> VOID ID .)


state 20

    (19) id_declaration -> INT ID .

    LBRACKET        reduce using rule 19 (id_declaration -> INT ID .)
    EQUALS          reduce using rule 19 (id_declaration -> INT ID .)
    LPAREN          reduce using rule 19 (id_declaration -> INT ID .)
    SEMI            reduce using rule 19 (id_declaration -> INT ID .)


state 21

    (7) function_definition -> id_declaration arguments compound_statement .

    SEMI            reduce using rule 7 (function_definition -> id_declaration arguments compound_statement .)
    INCLUDE         reduce using rule 7 (function_definition -> id_declaration arguments compound_statement .)
    VOID            reduce using rule 7 (function_definition -> id_declaration arguments compound_statement .)
    INT             reduce using rule 7 (function_definition -> id_declaration arguments compound_statement .)
    $end            reduce using rule 7 (function_definition -> id_declaration arguments compound_statement .)


state 22

    (36) compound_statement -> LBRACE . declaration_list RBRACE
    (37) compound_statement -> LBRACE . declaration_list statement_list RBRACE
    (38) compound_statement -> LBRACE . statement_list RBRACE
    (39) compound_statement -> LBRACE . RBRACE
    (40) declaration_list -> . declaration
    (41) declaration_list -> . declaration_list declaration
    (44) statement_list -> . statement
    (45) statement_list -> . statement_list statement
    (14) declaration -> . init_declaration SEMI
    (21) statement -> . compound_statement
    (22) statement -> . expression_statement
    (23) statement -> . jump_statement
    (24) statement -> . loop_statement
    (25) statement -> . condition_statement
    (15) init_declaration -> . id_declaration
    (16) init_declaration -> . id_declaration LBRACKET NUMBER RBRACKET
    (17) init_declaration -> . id_declaration EQUALS expression
    (36) compound_statement -> . LBRACE declaration_list RBRACE
    (37) compound_statement -> . LBRACE declaration_list statement_list RBRACE
    (38) compound_statement -> . LBRACE statement_list RBRACE
    (39) compound_statement -> . LBRACE RBRACE
    (42) expression_statement -> . SEMI
    (43) expression_statement -> . expression SEMI
    (26) jump_statement -> . BREAK SEMI
    (27) jump_statement -> . RETURN SEMI
    (28) jump_statement -> . RETURN expression SEMI
    (29) loop_statement -> . FOR LPAREN expression_statement expression_statement expression_statement RPAREN statement
    (30) loop_statement -> . FOR LPAREN expression_statement expression_statement expression RPAREN statement
    (31) loop_statement -> . WHILE LPAREN expression RPAREN statement
    (32) condition_statement -> . IF LPAREN expression RPAREN statement ELSE statement
    (33) condition_statement -> . IF LPAREN expression RPAREN statement
    (34) condition_statement -> . IF LPAREN ID MOD ID EQ NUMBER RPAREN statement
    (35) condition_statement -> . IF LPAREN expression LOR expression RPAREN statement ELSE statement
    (18) id_declaration -> . VOID ID
    (19) id_declaration -> . INT ID
    (46) expression -> . conditional_expression
    (47) expression -> . unary_expression EQUALS expression
    (48) expression -> . STRING
    (56) expression -> . PP unary_expression
    (57) expression -> . MM unary_expression
    (58) expression -> . unary_expression PP
    (59) expression -> . unary_expression MM
    (68) conditional_expression -> . cast_expression
    (69) conditional_expression -> . unary_expression LT term
    (70) conditional_expression -> . unary_expression LE term
    (71) conditional_expression -> . unary_expression GE term
    (72) conditional_expression -> . unary_expression GT term
    (73) conditional_expression -> . unary_expression EQ term
    (74) conditional_expression -> . unary_expression NE term
    (75) conditional_expression -> . unary_expression AND term
    (76) conditional_expression -> . unary_expression LAND term
    (77) conditional_expression -> . unary_expression PLUS term
    (78) conditional_expression -> . unary_expression TIMES term
    (79) conditional_expression -> . unary_expression MOD term
    (80) conditional_expression -> . unary_expression MINUS term
    (55) unary_expression -> . function_call
    (60) unary_expression -> . AND term
    (64) unary_expression -> . term
    (81) cast_expression -> . unary_expression
    (51) function_call -> . ID LPAREN expression_list RPAREN
    (52) function_call -> . ID LPAREN RPAREN
    (50) term -> . temp
    (61) term -> . ID
    (62) term -> . ID LBRACKET NUMBER RBRACKET
    (63) term -> . ID LBRACKET ID RBRACKET
    (65) term -> . factor
    (49) temp -> . LNOT unary_expression
    (66) factor -> . NUMBER
    (67) factor -> . LPAREN expression RPAREN

    RBRACE          shift and go to state 45
    LBRACE          shift and go to state 22
    SEMI            shift and go to state 49
    BREAK           shift and go to state 57
    RETURN          shift and go to state 58
    FOR             shift and go to state 59
    WHILE           shift and go to state 60
    IF              shift and go to state 61
    VOID            shift and go to state 10
    INT             shift and go to state 11
    STRING          shift and go to state 27
    PP              shift and go to state 28
    MM              shift and go to state 29
    AND             shift and go to state 32
    ID              shift and go to state 34
    LNOT            shift and go to state 39
    NUMBER          shift and go to state 37
    LPAREN          shift and go to state 35

    declaration_list               shift and go to state 44
    statement_list                 shift and go to state 46
    declaration                    shift and go to state 47
    statement                      shift and go to state 48
    init_declaration               shift and go to state 9
    compound_statement             shift and go to state 50
    expression_statement           shift and go to state 51
    jump_statement                 shift and go to state 52
    loop_statement                 shift and go to state 53
    condition_statement            shift and go to state 54
    id_declaration                 shift and go to state 55
    expression                     shift and go to state 56
    conditional_expression         shift and go to state 25
    unary_expression               shift and go to state 26
    cast_expression                shift and go to state 30
    term                           shift and go to state 31
    function_call                  shift and go to state 33
    temp                           shift and go to state 36
    factor                         shift and go to state 38

state 23

    (16) init_declaration -> id_declaration LBRACKET NUMBER . RBRACKET

    RBRACKET        shift and go to state 62


state 24

    (17) init_declaration -> id_declaration EQUALS expression .

    SEMI            reduce using rule 17 (init_declaration -> id_declaration EQUALS expression .)


state 25

    (46) expression -> conditional_expression .

    SEMI            reduce using rule 46 (expression -> conditional_expression .)
    RPAREN          reduce using rule 46 (expression -> conditional_expression .)
    COMMA           reduce using rule 46 (expression -> conditional_expression .)
    LOR             reduce using rule 46 (expression -> conditional_expression .)


state 26

    (47) expression -> unary_expression . EQUALS expression
    (58) expression -> unary_expression . PP
    (59) expression -> unary_expression . MM
    (69) conditional_expression -> unary_expression . LT term
    (70) conditional_expression -> unary_expression . LE term
    (71) conditional_expression -> unary_expression . GE term
    (72) conditional_expression -> unary_expression . GT term
    (73) conditional_expression -> unary_expression . EQ term
    (74) conditional_expression -> unary_expression . NE term
    (75) conditional_expression -> unary_expression . AND term
    (76) conditional_expression -> unary_expression . LAND term
    (77) conditional_expression -> unary_expression . PLUS term
    (78) conditional_expression -> unary_expression . TIMES term
    (79) conditional_expression -> unary_expression . MOD term
    (80) conditional_expression -> unary_expression . MINUS term
    (81) cast_expression -> unary_expression .

    EQUALS          shift and go to state 63
    PP              shift and go to state 64
    MM              shift and go to state 65
    LT              shift and go to state 66
    LE              shift and go to state 67
    GE              shift and go to state 68
    GT              shift and go to state 69
    EQ              shift and go to state 70
    NE              shift and go to state 71
    AND             shift and go to state 72
    LAND            shift and go to state 73
    PLUS            shift and go to state 74
    TIMES           shift and go to state 75
    MOD             shift and go to state 76
    MINUS           shift and go to state 77
    SEMI            reduce using rule 81 (cast_expression -> unary_expression .)
    RPAREN          reduce using rule 81 (cast_expression -> unary_expression .)
    COMMA           reduce using rule 81 (cast_expression -> unary_expression .)
    LOR             reduce using rule 81 (cast_expression -> unary_expression .)


state 27

    (48) expression -> STRING .

    SEMI            reduce using rule 48 (expression -> STRING .)
    RPAREN          reduce using rule 48 (expression -> STRING .)
    COMMA           reduce using rule 48 (expression -> STRING .)
    LOR             reduce using rule 48 (expression -> STRING .)


state 28

    (56) expression -> PP . unary_expression
    (55) unary_expression -> . function_call
    (60) unary_expression -> . AND term
    (64) unary_expression -> . term
    (51) function_call -> . ID LPAREN expression_list RPAREN
    (52) function_call -> . ID LPAREN RPAREN
    (50) term -> . temp
    (61) term -> . ID
    (62) term -> . ID LBRACKET NUMBER RBRACKET
    (63) term -> . ID LBRACKET ID RBRACKET
    (65) term -> . factor
    (49) temp -> . LNOT unary_expression
    (66) factor -> . NUMBER
    (67) factor -> . LPAREN expression RPAREN

    AND             shift and go to state 32
    ID              shift and go to state 34
    LNOT            shift and go to state 39
    NUMBER          shift and go to state 37
    LPAREN          shift and go to state 35

    unary_expression               shift and go to state 78
    function_call                  shift and go to state 33
    term                           shift and go to state 31
    temp                           shift and go to state 36
    factor                         shift and go to state 38

state 29

    (57) expression -> MM . unary_expression
    (55) unary_expression -> . function_call
    (60) unary_expression -> . AND term
    (64) unary_expression -> . term
    (51) function_call -> . ID LPAREN expression_list RPAREN
    (52) function_call -> . ID LPAREN RPAREN
    (50) term -> . temp
    (61) term -> . ID
    (62) term -> . ID LBRACKET NUMBER RBRACKET
    (63) term -> . ID LBRACKET ID RBRACKET
    (65) term -> . factor
    (49) temp -> . LNOT unary_expression
    (66) factor -> . NUMBER
    (67) factor -> . LPAREN expression RPAREN

    AND             shift and go to state 32
    ID              shift and go to state 34
    LNOT            shift and go to state 39
    NUMBER          shift and go to state 37
    LPAREN          shift and go to state 35

    unary_expression               shift and go to state 79
    function_call                  shift and go to state 33
    term                           shift and go to state 31
    temp                           shift and go to state 36
    factor                         shift and go to state 38

state 30

    (68) conditional_expression -> cast_expression .

    SEMI            reduce using rule 68 (conditional_expression -> cast_expression .)
    RPAREN          reduce using rule 68 (conditional_expression -> cast_expression .)
    COMMA           reduce using rule 68 (conditional_expression -> cast_expression .)
    LOR             reduce using rule 68 (conditional_expression -> cast_expression .)


state 31

    (64) unary_expression -> term .

    EQUALS          reduce using rule 64 (unary_expression -> term .)
    PP              reduce using rule 64 (unary_expression -> term .)
    MM              reduce using rule 64 (unary_expression -> term .)
    LT              reduce using rule 64 (unary_expression -> term .)
    LE              reduce using rule 64 (unary_expression -> term .)
    GE              reduce using rule 64 (unary_expression -> term .)
    GT              reduce using rule 64 (unary_expression -> term .)
    EQ              reduce using rule 64 (unary_expression -> term .)
    NE              reduce using rule 64 (unary_expression -> term .)
    AND             reduce using rule 64 (unary_expression -> term .)
    LAND            reduce using rule 64 (unary_expression -> term .)
    PLUS            reduce using rule 64 (unary_expression -> term .)
    TIMES           reduce using rule 64 (unary_expression -> term .)
    MOD             reduce using rule 64 (unary_expression -> term .)
    MINUS           reduce using rule 64 (unary_expression -> term .)
    SEMI            reduce using rule 64 (unary_expression -> term .)
    RPAREN          reduce using rule 64 (unary_expression -> term .)
    COMMA           reduce using rule 64 (unary_expression -> term .)
    LOR             reduce using rule 64 (unary_expression -> term .)


state 32

    (60) unary_expression -> AND . term
    (50) term -> . temp
    (61) term -> . ID
    (62) term -> . ID LBRACKET NUMBER RBRACKET
    (63) term -> . ID LBRACKET ID RBRACKET
    (65) term -> . factor
    (49) temp -> . LNOT unary_expression
    (66) factor -> . NUMBER
    (67) factor -> . LPAREN expression RPAREN

    ID              shift and go to state 81
    LNOT            shift and go to state 39
    NUMBER          shift and go to state 37
    LPAREN          shift and go to state 35

    term                           shift and go to state 80
    temp                           shift and go to state 36
    factor                         shift and go to state 38

state 33

    (55) unary_expression -> function_call .

    EQUALS          reduce using rule 55 (unary_expression -> function_call .)
    PP              reduce using rule 55 (unary_expression -> function_call .)
    MM              reduce using rule 55 (unary_expression -> function_call .)
    LT              reduce using rule 55 (unary_expression -> function_call .)
    LE              reduce using rule 55 (unary_expression -> function_call .)
    GE              reduce using rule 55 (unary_expression -> function_call .)
    GT              reduce using rule 55 (unary_expression -> function_call .)
    EQ              reduce using rule 55 (unary_expression -> function_call .)
    NE              reduce using rule 55 (unary_expression -> function_call .)
    AND             reduce using rule 55 (unary_expression -> function_call .)
    LAND            reduce using rule 55 (unary_expression -> function_call .)
    PLUS            reduce using rule 55 (unary_expression -> function_call .)
    TIMES           reduce using rule 55 (unary_expression -> function_call .)
    MOD             reduce using rule 55 (unary_expression -> function_call .)
    MINUS           reduce using rule 55 (unary_expression -> function_call .)
    SEMI            reduce using rule 55 (unary_expression -> function_call .)
    RPAREN          reduce using rule 55 (unary_expression -> function_call .)
    COMMA           reduce using rule 55 (unary_expression -> function_call .)
    LOR             reduce using rule 55 (unary_expression -> function_call .)


state 34

    (51) function_call -> ID . LPAREN expression_list RPAREN
    (52) function_call -> ID . LPAREN RPAREN
    (61) term -> ID .
    (62) term -> ID . LBRACKET NUMBER RBRACKET
    (63) term -> ID . LBRACKET ID RBRACKET

    LPAREN          shift and go to state 82
    EQUALS          reduce using rule 61 (term -> ID .)
    PP              reduce using rule 61 (term -> ID .)
    MM              reduce using rule 61 (term -> ID .)
    LT              reduce using rule 61 (term -> ID .)
    LE              reduce using rule 61 (term -> ID .)
    GE              reduce using rule 61 (term -> ID .)
    GT              reduce using rule 61 (term -> ID .)
    EQ              reduce using rule 61 (term -> ID .)
    NE              reduce using rule 61 (term -> ID .)
    AND             reduce using rule 61 (term -> ID .)
    LAND            reduce using rule 61 (term -> ID .)
    PLUS            reduce using rule 61 (term -> ID .)
    TIMES           reduce using rule 61 (term -> ID .)
    MOD             reduce using rule 61 (term -> ID .)
    MINUS           reduce using rule 61 (term -> ID .)
    SEMI            reduce using rule 61 (term -> ID .)
    RPAREN          reduce using rule 61 (term -> ID .)
    COMMA           reduce using rule 61 (term -> ID .)
    LOR             reduce using rule 61 (term -> ID .)
    LBRACKET        shift and go to state 83


state 35

    (67) factor -> LPAREN . expression RPAREN
    (46) expression -> . conditional_expression
    (47) expression -> . unary_expression EQUALS expression
    (48) expression -> . STRING
    (56) expression -> . PP unary_expression
    (57) expression -> . MM unary_expression
    (58) expression -> . unary_expression PP
    (59) expression -> . unary_expression MM
    (68) conditional_expression -> . cast_expression
    (69) conditional_expression -> . unary_expression LT term
    (70) conditional_expression -> . unary_expression LE term
    (71) conditional_expression -> . unary_expression GE term
    (72) conditional_expression -> . unary_expression GT term
    (73) conditional_expression -> . unary_expression EQ term
    (74) conditional_expression -> . unary_expression NE term
    (75) conditional_expression -> . unary_expression AND term
    (76) conditional_expression -> . unary_expression LAND term
    (77) conditional_expression -> . unary_expression PLUS term
    (78) conditional_expression -> . unary_expression TIMES term
    (79) conditional_expression -> . unary_expression MOD term
    (80) conditional_expression -> . unary_expression MINUS term
    (55) unary_expression -> . function_call
    (60) unary_expression -> . AND term
    (64) unary_expression -> . term
    (81) cast_expression -> . unary_expression
    (51) function_call -> . ID LPAREN expression_list RPAREN
    (52) function_call -> . ID LPAREN RPAREN
    (50) term -> . temp
    (61) term -> . ID
    (62) term -> . ID LBRACKET NUMBER RBRACKET
    (63) term -> . ID LBRACKET ID RBRACKET
    (65) term -> . factor
    (49) temp -> . LNOT unary_expression
    (66) factor -> . NUMBER
    (67) factor -> . LPAREN expression RPAREN
